--- a/app/components/Verse/VerseColour/VerseColourSliderLogic.scss
+++ b/app/components/Verse/VerseColour/VerseColourSliderLogic.scss
@@ -25,16 +25,6 @@
     }
 }
 
-// "Root slider stanza index, child stanza index."
-.RsS0 .ChS0, .RsS1 .ChS1, .RsS2 .ChS2, .RsS3 .ChS3, .RsS4 .ChS4, .RsS5 .ChS5, .RsS6 .ChS6, .RsS7 .ChS7, .RsS8 .ChS8, .RsS9 .ChS9, .RsS10 .ChS10, .RsS11 .ChS11, .RsS12 .ChS12, .RsS13 .ChS13 {
-    // Styling for verse colours after cursored stanza.
-
-    // Grandchildren of all subsequent "child stanza" siblings.
-    ~ .ChS .GcV {
-        background-color: $bgColour__afterSlider;
-    }
-}
-
 // "Root slider verse index, parent of verse index."
 .RsV0 .PoV0, .RsV1 .PoV1, .RsV2 .PoV2, .RsV3 .PoV3, .RsV4 .PoV4, .RsV5 .PoV5, .RsV6 .PoV6, .RsV7 .PoV7, .RsV8 .PoV8, .RsV9 .PoV9, .RsV10 .PoV10, .RsV11 .PoV11, .RsV12 .PoV12, .RsV13 .PoV13, .RsV14 .PoV14, .RsV15 .PoV15, .RsV16 .PoV16, .RsV17 .PoV17, .RsV18 .PoV18, .RsV19 .PoV19, .RsV20 .PoV20, .RsV21 .PoV21, .RsV22 .PoV22, .RsV23 .PoV23, .RsV24 .PoV24, .RsV25 .PoV25, .RsV26 .PoV26, .RsV27 .PoV27, .RsV28 .PoV28, .RsV29 .PoV29, .RsV30 .PoV30, .RsV31 .PoV31, .RsV32 .PoV32, .RsV33 .PoV33, .RsV34 .PoV34, .RsV35 .PoV35, .RsV36 .PoV36, .RsV37 .PoV37, .RsV38 .PoV38, .RsV39 .PoV39, .RsV40 .PoV40, .RsV41 .PoV41, .RsV42 .PoV42, .RsV43 .PoV43, .RsV44 .PoV44, .RsV45 .PoV45, .RsV46 .PoV46, .RsV47 .PoV47, .RsV48 .PoV48, .RsV49 .PoV49, .RsV50 .PoV50, .RsV51 .PoV51, .RsV52 .PoV52, .RsV53 .PoV53, .RsV54 .PoV54, .RsV55 .PoV55, .RsV56 .PoV56, .RsV57 .PoV57, .RsV58 .PoV58, .RsV59 .PoV59, .RsV60 .PoV60, .RsV61 .PoV61, .RsV62 .PoV62 {
     /**
